@@ -222,8 +222,8 @@ static short LARGE_FILTER_IMP[];
 bool    interpFilt;
 bool    largeFilter;
 bool    linearInterp;
-short  ** _X;
-short  ** _Y;
+short  ** _I;
+short  ** _J;
 unsigned int _Time;
 double  _factor;
 int     _nChans;
